# magentic-one-agent-customized

./: .env.example  .gitignore  FRONTEND_SETUP.md  README.md  app.py  fly.toml  magentic_one_agent.py  pyproject.toml  requirements.txt  start.sh  test_customizations.py  web_app.py
config/: lumen_branding.py
deployment/: azure_deployment.md
examples/: partner_scenarios.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
static/css/: style.css
static/js/: main.js  query.js
templates/: about.html  base.html  demo.html  error.html  index.html  query.html  support_templates.py
tests/: test_agent.py
