[tool.poetry]
name = "lumen-magentic-one-agent"
version = "1.0.0"
description = "Lumen-customized Magentic-One Agent for customer support and channel partner scaling"
authors = ["Lumen Technologies <support@lumen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
azure-ai-projects = "^1.0.0"
azure-ai-agents = "^1.0.0"
azure-identity = "^1.15.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
